# minimal_browser

./: .gitignore  .kilocodemodes  ARCHITECTURE.md  BOOKMARKS.md  CONTRIBUTING.md  EXTERNAL_BROWSER_INTEGRATION.md  FEATURE_REQUESTS.md  FILE_BROWSER_DOCS.md  FR006_IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  INVESTIGATION_INDEX.md  INVESTIGATION_SUMMARY.md  INVESTIGATION_TAURI_ENGINE.md  NATIVE_OPTIMIZATION.md  QUICK_REFERENCE.md  README.md  ROADMAP.md  TESTING.md  TESTING_IMPLEMENTATION_SUMMARY.md  TESTING_SUMMARY.md  config.toml.example  demo_bookmarks.py  demo_browsing_data.py  minimal_browser.py  pyproject.toml  pytest.ini  run_tests.py  setup_ai.py  test_cache_logic.py  test_config_integration.py  test_external_browser.py  test_external_browser_simple.py
.github/: ARCHITECTURE_CRITIQUE.md  copilot-instructions.md
.github/workflows/: tests.yml
.kiro/steering/: product.md  structure.md  tech.md
assets/screenshots/: README.md
benchmarks/: README.md  demo_optimizations.py  test_native_integration.py  text_processing_benchmark.py
dev/: keystore_examples.py
dev/layouts/: composed_browser.py  qdockwidget.py  qhboxvbox.py  qsplitter.py
docs/: ARCHITECTURE_DIAGRAMS.md  IMPLEMENTATION_CHECKLIST.md  INVESTIGATION_SUMMARY.md  PYDANTIC_INTEGRATION.md  TAURI_INVESTIGATION.md
docs/api/: browsing_data.md
docs/coordination/: A2A_README.md  CONTEXT_API.md  README.md
docs/development/: ARCHITECTURE.md  CONTRIBUTING.md  QUICK_REFERENCE.md
docs/features/: SCREENSHOT_TESTING.md
docs/implementation/: FR006_IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  TESTING_IMPLEMENTATION_SUMMARY.md
docs/issues/: INDEX.md  ISSUE_01_browsing_data_management.md  ISSUE_02_webapps_rendering.md  ISSUE_03_agent_context_management.md  ISSUE_04_agent_goal_management.md  ISSUE_05_agent_to_agent_communication.md  ISSUE_06_gtk_engine_documentation.md  ISSUE_07_conversation_log_cleanup.md  LABELS.md  QUICKSTART.md  README.md  SUMMARY.md  create_issues.py  create_labels.sh
docs/planning/: FEATURE_REQUESTS.md  INVESTIGATION_INDEX.md  ROADMAP.md
examples/: context_integration.py  goal_management_examples.py  pydantic_validation_demo.py
layouts/: qsplitter.py
native_extensions/: .gitignore  Cargo.toml  README.md  pyproject.toml
native_extensions/src/: lib.rs
scripts/: capture_screenshots.py  check_docs.py  generate_models.py  profile_performance.py
tests/: README.md  __init__.py  conftest.py  test_utils.py
(+74 files in other folders)
