[project]
name = "minimal-browser"
version = "0.2.0"
description = "Minimal vim-like browser with native AI integration"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyqt6>=6.8.0",
    "pyqt6-webengine>=6.8.0",
    "requests>=2.31.0",
]

[tool.uv.workspace]
members = ["pyside"]
