[project]
name = "minimal-browser"
version = "0.2.0"
description = "Minimal vim-like browser with native AI integration"
readme = "README.md"
authors = [
    { name = "Matias Ceau", email = "matias@ceau.net" }
]
requires-python = ">=3.13"
dependencies = [
    "openai>=1.107.2",
    "pyside6>=6.9.2",
    "requests>=2.32.5",
]

[project.scripts]
minimal-browser = "minimal_browser:main"

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"
