[project]
name = "minimal-browser"
version = "0.2.0"
description = "Minimal vim-like browser with native AI integration"
readme = "README.md"
authors = [{ name = "Matias Ceau", email = "matias@ceau.net" }]
requires-python = ">=3.13"
dependencies = [
    "openai>=1.107.2",
    "pyside6>=6.9.2",
    "requests>=2.32.5",
    "pydantic>=2.8.2",
    "pydantic-ai>=0.1.0",
    "boto3>=1.35.0",
    "chromadb>=0.4.24",
    "tomli-w>=1.0.0",
    "jinja2>=3.1.6",
    "keyring>=25.5.0",
]

[project.scripts]
minimal-browser = "minimal_browser:main"

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ipython>=9.5.0",
]
