[package]
name = "minimal_browser_native"
version = "0.1.0"
edition = "2021"

[lib]
name = "minimal_browser_native"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module"] }
regex = "1.10"
base64 = "0.21"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
